@@ -52,7 +52,8 @@ public class UsuarioService {
     
     //Metodo para obtener usuarios Empleados y Admins
     public List<Usuario> obtenerEmpleadosYAdmins() {
-        return usuarioRepository.findByRolNombreIn(Arrays.asList("EMPLEADO", "ADMIN"));
+        //return usuarioRepository.findByRolNombreIn(Arrays.asList("EMPLEADO", "ADMIN"));
+        return usuarioRepository.findRolNombreIn(List.of("EMPLEADO", "ADMIN"));
     }
 
     public Usuario guardarEmpleado(UsuarioRequest request){
